--- a/sass/layout/footer.scss
+++ b/sass/layout/footer.scss
@@ -21,6 +21,13 @@ footer {
     margin: 0;
   }
 }
+#page-resto1 {
+  footer a {
+    color: white;
+    text-decoration: none;
+    list-style: none;
+  }
+}
 #page-resto2 {
   footer a {
     color: white;
